Main page + nav bar

--- a/index.html
+++ b/index.html
@@ -1,21 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web-project</title>
+  <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
-        <h1>Team Template</h1>
-    </header>
-    <main>
+  <header class="header">
+    <div class="header__container">
 
-    </main>
-    <footer>
+      <nav class="header__menu menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="@" class="menu__link">Home</a>
+          </li>
+          <li class="menu__item">
+            <a href="@" class="menu__link">Product</a>
+          </li>
+          <li class="menu__item">
+            <a href="@" class="menu__link">Pricing</a>
+          </li>
+          <li class="menu__item">
+            <a href="@" class="menu__link">About</a>
+          </li>
+          <li class="menu__item">
+            <a href="@" class="menu__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
 
-    </footer>
+      <a href="@" class="logo"><img class="logo" src="img/logo.png" alt="logo"></a>
+
+      <div class="social__networks">
+        <a href="@" class="social__links"><img src="img/twitter.png" alt="twitter link" class="twitter"></a>
+        <a href="@" class="social__links"><img src="img/facebook.png" alt="twitter link" class="facebook"></a>
+        <a href="@" class="social__links"><img src="img/linkedin.png" alt="twitter link" class="linkedin"></a>
+      </div>
+
+    </div>
+    <div class="main__title">
+    <h1 class="main__text">The best products<br>
+      start with Figma</h1>
+    </div>
+
+    <div class="sub__title">
+      <h1 class="sub__text">Most calendars are designed for teams. Slate is designed<br> 
+        for freelancers</h1>
+      </div>
+
+  </header>
+  <main>
+
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
