--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="header__container">
 
-      <nav class="header__menu menu">
+      <nav class="header__menu">
         <ul class="menu__list">
           <li class="menu__item">
             <a href="@" class="menu__link">Home</a>
@@ -51,6 +51,9 @@
     <div class="sub__title">
       <h1 class="sub__text">Most calendars are designed for teams. Slate is designed<br> 
         for freelancers</h1>
+      </div>
+      <div class="button">
+        <button class="try__button"><a href="@" class="try__link">Try for free</a></button>
       </div>
 
   </header>
