--- a/index.html
+++ b/index.html
@@ -17,47 +17,49 @@
       <nav class="header__menu">
         <ul class="menu__list">
           <li class="menu__item">
-            <a href="@" class="menu__link">Home</a>
+            <a href="#" class="menu__link">Home</a>
           </li>
           <li class="menu__item">
-            <a href="@" class="menu__link">Product</a>
+            <a href="#" class="menu__link">Product</a>
           </li>
           <li class="menu__item">
-            <a href="@" class="menu__link">Pricing</a>
+            <a href="#" class="menu__link">Pricing</a>
           </li>
           <li class="menu__item">
-            <a href="@" class="menu__link">About</a>
+            <a href="#" class="menu__link">About</a>
           </li>
           <li class="menu__item">
-            <a href="@" class="menu__link">Contact</a>
+            <a href="#" class="menu__link">Contact</a>
           </li>
         </ul>
       </nav>
 
-      <a href="@" class="logo"><img class="logo" src="img/logo.png" alt="logo"></a>
+      <a href="#" class="logo"><img class="logo" src="img/logo.png" alt="logo"></a>
 
       <div class="social__networks">
-        <a href="@" class="social__links"><img src="img/twitter.png" alt="twitter link" class="twitter"></a>
-        <a href="@" class="social__links"><img src="img/facebook.png" alt="twitter link" class="facebook"></a>
-        <a href="@" class="social__links"><img src="img/linkedin.png" alt="twitter link" class="linkedin"></a>
+        <a href="#" class="social__links"><img src="img/twitter.png" alt="twitter link" class="twitter"></a>
+        <a href="#" class="social__links"><img src="img/facebook.png" alt="twitter link" class="facebook"></a>
+        <a href="#" class="social__links"><img src="img/linkedin.png" alt="twitter link" class="linkedin"></a>
       </div>
 
     </div>
     <div class="main__title">
-    <h1 class="main__text">The best products<br>
-      start with Figma</h1>
+      <h1 class="main__text">The best products<br>
+        start with Figma</h1>
     </div>
 
     <div class="sub__title">
-      <h1 class="sub__text">Most calendars are designed for teams. Slate is designed<br> 
+      <h1 class="sub__text">Most calendars are designed for teams. Slate is designed<br>
         for freelancers</h1>
-      </div>
-      <div class="button">
-        <button class="try__button"><a href="@" class="try__link">Try for free</a></button>
-      </div>
+    </div>
+    <div class="button">
+      <form class="try__link" action="page/new.html" target="_blank"> <button class="try__button">Try for
+          free</button></form>
+    </div>
 
   </header>
   <main>
+
 
 
   </main>
