--- a/index.html
+++ b/index.html
@@ -11,61 +11,123 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header__container">
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__container">
 
-      <nav class="header__menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Home</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Product</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Pricing</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">About</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Contact</a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="header__menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Product</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Pricing</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">About</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Contact</a>
+            </li>
+          </ul>
+        </nav>
 
-      <a href="#" class="logo"><img class="logo" src="img/logo.png" alt="logo"></a>
+        <a href="#" class="logo"><img class="logo" src="img/logo.png" alt="logo"></a>
 
-      <div class="social__networks">
-        <a href="#" class="social__links"><img src="img/twitter.png" alt="twitter link" class="twitter"></a>
-        <a href="#" class="social__links"><img src="img/facebook.png" alt="twitter link" class="facebook"></a>
-        <a href="#" class="social__links"><img src="img/linkedin.png" alt="twitter link" class="linkedin"></a>
+        <div class="social__networks">
+          <a href="#" class="social__links"><img src="img/twitter.png" alt="twitter link" class="twitter"></a>
+          <a href="#" class="social__links"><img src="img/facebook.png" alt="twitter link" class="facebook"></a>
+          <a href="#" class="social__links"><img src="img/linkedin.png" alt="twitter link" class="linkedin"></a>
+        </div>
+
+      </div>
+      <div class="main__title">
+        <h1 class="main__text">The best products<br>
+          start with Figma</h1>
       </div>
 
-    </div>
-    <div class="main__title">
-      <h1 class="main__text">The best products<br>
-        start with Figma</h1>
-    </div>
+      <div class="sub__title">
+        <h1 class="sub__text">Most calendars are designed for teams. Slate is designed<br>
+          for freelancers</h1>
+      </div>
+      <div class="button">
+        <form class="try__form" action="page/new.html" target="_blank"> <button class="try__button"><span
+              class="try__link">Try for
+              free</span></button></form>
+      </div>
+    </header>
+    <main>
 
-    <div class="sub__title">
-      <h1 class="sub__text">Most calendars are designed for teams. Slate is designed<br>
-        for freelancers</h1>
-    </div>
-    <div class="button">
-      <form class="try__link" action="page/new.html" target="_blank"> <button class="try__button">Try for
-          free</button></form>
-    </div>
+      <section class="features">
+        <div class="features__container">
+          <div class="features__title">
+            <h2 class="feature__text">Feature</h2>
+            <div class="features__subtitle">
+              <p class="feature__subtext">Most calendars are designed for teams.<br>
+                Slate is designed for freelancers</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  </header>
-  <main>
+      <div class="feature__cards">
+        <div class="cards__container">
+          <div class="feature__card">
+            <div class="card__image"><img src="img/circle.png" alt="circle"></div>
+            <div class="card__title">
+              <p class="card__text">OpenType features<br>
+                Variable fonts</p>
+            </div>
+            <div class="sub__title">
+              <p class="card__subtext">Slate helps you see how<br>
+                many more days you need<br>
+                to work to reach your<br>
+                financial goal.</p>
+            </div>
+          </div>
+          <div class="feature__card">
+            <div class="card__image"><img src="img/pen.png" alt="pen"></div>
+            <div class="card__title">
+              <p class="card__text">Design with real data</p>
+            </div>
+            <div class="sub__title">
+              <p class="card__subtext">Slate helps you see how<br>
+                many more days you need<br>
+                to work to reach your<br>
+                financial goal.</p>
+            </div>
+          </div>
+          <div class="feature__card">
+            <div class="card__image"><img src="img/pencil.png" alt="pencil"></div>
+            <div class="card__title">
+              <p class="card__text">Fastest way to<br>
+                take action</p>
+            </div>
+            <div class="sub__title">
+              <p class="card__subtext">Slate helps you see how<br>
+                many more days you need<br>
+                to work to reach your<br>
+                financial goal.</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-
-
+      <div class="video__section">
+        <img src="img/video.png" alt="video bg">
+        <div class="play-icon">
+          <div class="triangle"></div>
+          <div class="bar"></div>
+        </div>
+      </div>
   </main>
   <footer>
 
   </footer>
+  </div>
 </body>
 
 </html>
